[metadata]
name = calcium-binding-amoruso
version = 0.0.1
author = Luciano Amoruso
author_email = luciano01amoruso@gmail.com
description = Calcium binding project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BioinformaticaUNQ/calcio_binding_regions_visualazer-grupo2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
